welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: ';' expected but 'return' found.
  if (90<=n<=110) or (190<=n<=110) return true} 
                                   ^